@startuml

title __ACTIONS's Class Diagram__\n

  package  {
    package engine.ai.actions {
      class AiActions {
          ~ wanderingDirection : int
          ~ spamming : boolean
          ~ map : Rectangle
          + AiActions()
          + assignRandomElement()
          + assignDifferentRandomElement()
          + moveAwayFromPlayer()
          + moveAwayFromEdge()
          + moveTo()
          + simpleMovement()
          ~ up()
          ~ down()
          ~ left()
          ~ right()
          ~ upcart()
          ~ downcart()
          ~ leftcart()
          ~ rightcart()
          + moveTo()
          + changeToRandomElementAfter()
          + startWandering()
          + changeToBefittingElement()
      }
    }
  }
  

  package  {
    package engine.ai.actions {
      class AiHillStateActions {
          + AiHillStateActions()
          + executeAction()
          - escapeOnHill()
          - wanderOnHill()
          - goToHill()
      }
    }
  }
  

  package  {
    package engine.ai.actions {
      class AiKillsStateActions {
          + AiKillsStateActions()
      }
    }
  }
  

  package  {
    package engine.ai.actions {
      class AiRegicideStateActions {
          + AiRegicideStateActions()
      }
    }
  }
  

  package  {
    package engine.ai.actions {
      abstract class AiStateActions {
          ~ wandering : boolean
          + AiStateActions()
          + executeAction()
          + setWandering()
          + isWandering()
          # wander()
          # findSpeed()
          # findDamage()
          # findHealth()
          # aggressiveAttack()
          # escape()
          # attack()
          # attackWinner()
          # updateElement()
          # updateWandering()
      }
    }
  }
  

  package  {
    package engine.ai.actions {
      class AiTimedStateActions {
          + AiTimedStateActions()
      }
    }
  }
  

  AiActions o-- AiController : aiCon
  AiActions o-- AiCalculations : calc
  AiActions o-- Player : aiPlayer
  AiHillStateActions -up-|> AiStateActions
  AiKillsStateActions -up-|> AiStateActions
  AiRegicideStateActions -up-|> AiStateActions
  AiStateActions o-- Player : aiPlayer
  AiStateActions o-- Player : player
  AiStateActions o-- AiController : aiCon
  AiStateActions o-- AiCalculations : calc
  AiStateActions o-- AiActions : actions
  AiTimedStateActions -up-|> AiStateActions


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
